--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,5 @@
 @import "blocks/requisite";
 @import "blocks/news-page";
 @import "blocks/contacts-page";
+@import "blocks/education";
+@import "blocks/project";
